helm_chart/database/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-from-frontend-ns
  namespace: backend-ns  # Apply this policy in the backend namespace
spec:
  podSelector: 
    matchLabels:
      app: backend  # Selects the backend pods
  ingress:
    - from:
        - namespaceSelector: 
            matchLabels:
              name: frontend-ns  # Allow traffic from the `frontend-ns` namespace
      ports:
        - protocol: TCP
          port: 5000  # Allow traffic on port 5000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-from-backend-ns
  namespace: database-ns  # Apply this policy in the backend namespace
spec:
  podSelector:
    matchLabels:
      app: database  # Selects the database pods
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: backend-ns  # Allow traffic from the `backend-ns` namespace
      ports:
        - protocol: TCP
          port: 6379  # Allow traffic on port 6379
